@@ -4,6 +4,7 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.stream.Collectors;
@@ -20,15 +21,10 @@ import edu.kit.kastel.sdq.coupling.models.java.members.Parameter;
 
 public class AccessAnalysisFittetPowerSetResultingSpecificationExtractor extends ResultingSpecificationExtractor {
 
-	private static String DELIMITER = ";";
-	
-	
-	private ResultingSpecification resultingSpecification;
 	private Map<Tuple<Parameter, SecurityLevel>, Collection<ResultEntry>> sinkEntryAssignment = new HashMap<>();
 	
 	public AccessAnalysisFittetPowerSetResultingSpecificationExtractor(Configuration config) {
 		super(config);
-		this.resultingSpecification = new ResultingSpecification();
 	}
 
 
@@ -37,7 +33,7 @@ public class AccessAnalysisFittetPowerSetResultingSpecificationExtractor extends
 	private ResultingSpecEntry combine(Tuple<Parameter, SecurityLevel> originalSink, Collection<ResultEntry> resultEntries) {
 		
 
-		Collection<ResultEntry> relevantResultEntries = resultEntries.stream().filter(entry -> isResultEntryValidWRTAccessAnalysis(entry)).collect(Collectors.toList());
+		List<ResultEntry> relevantResultEntries = resultEntries.stream().filter(entry -> isResultEntryValidWRTAccessAnalysis(entry)).collect(Collectors.toList());
 		
 		if(relevantResultEntries.size() == 0) {
 			return null;
@@ -47,17 +43,17 @@ public class AccessAnalysisFittetPowerSetResultingSpecificationExtractor extends
 		
 		
 		for(ResultEntry entry : relevantResultEntries) {
-			unifiedLevels.addAll(CodeQLResolutionUtil.resolveBasicLevels(entry.getSource().getSecurityProperty(), config, DELIMITER));
+			unifiedLevels.addAll(CodeQLResolutionUtil.resolveBasicLevels(entry.getSource().getSecurityProperty(), entry.getConfig(), DELIMITER));
 		}
 		
 		
 		
-		return new ResultingSpecEntry(CodeQLResolutionUtil.findLevelFromSetOfBasicLevels(unifiedLevels, config), originalSink.getFirst());
+		return new ResultingSpecEntry(CodeQLResolutionUtil.findLevelFromSetOfBasicLevels(unifiedLevels, relevantResultEntries.get(0).getConfig()), originalSink.getFirst());
 	}
 	
 	private boolean isResultEntryValidWRTAccessAnalysis(ResultEntry resultEntry) {
-		Collection<SecurityLevel> sourceBasicLevels = CodeQLResolutionUtil.resolveBasicLevels(resultEntry.getSource().getSecurityProperty(), config, DELIMITER);
-		Collection<SecurityLevel> sinkBasicLevels = CodeQLResolutionUtil.resolveBasicLevels(resultEntry.getSink().getSecurityProperty(), config, DELIMITER);
+		Collection<SecurityLevel> sourceBasicLevels = CodeQLResolutionUtil.resolveBasicLevels(resultEntry.getSource().getSecurityProperty(), resultEntry.getConfig(), DELIMITER);
+		Collection<SecurityLevel> sinkBasicLevels = CodeQLResolutionUtil.resolveBasicLevels(resultEntry.getSink().getSecurityProperty(), resultEntry.getConfig(), DELIMITER);
 		
 		boolean valid = !(sourceBasicLevels.size() >= sinkBasicLevels.size() && containsAny(sourceBasicLevels, sinkBasicLevels));
 
